Next GoodJoc version. Not finished language manager.

--- a/views/styles/header.styl
+++ b/views/styles/header.styl
@@ -1,14 +1,45 @@
 @import 'nib'
 
+
+#language-selector
+  position:fixed
+  left:80px
+  top: 6px
+  width: 120px
+
+.selected
+  border:1px dashed #8888a8;
+
+.language-selector-link
+  margin-left: 0px
+  margin-right: 2px
+  padding-left: 3px
+  padding-right: 3px
+  padding-top: 1px
+  padding-bottom: 1px
+  color: #555
+  font-size: 10pt
+  text-decoration: none
+  text-shadow: 1px 1px #eee
+
+.language-selector-link:visited
+  color: #111
+
+.language-selector-link:hover
+  text-shadow: 2px 1px #da0
+
+.language-selector-link:last-child
+  margin-right: 0
+
 #logo-content
   position:fixed
   left:25px
-  top: 5px
+  top: 0px
   width: 100px
 
 #img-logo
-  width: 25px
-  height: 25px
+  width: 34px
+  height: 34px
   
 
 #header-links
