--- a/views/templates/footer.hbs
+++ b/views/templates/footer.hbs
@@ -1,12 +1,12 @@
-		<a href=”mailto:contact%40goodjoc%2ecom?subject=Contacto con good joc”> contact [at] goodjoc.com </a>
+		<a href='mailto:{{getContent "email_contact"}}?subject=Contacto con good joc'>{{getContent 'email_contact'}}</a>
 		<span>|</span>
-		<a href=”http://www.twitter.com”>Twitter</a>
+		<a href={{getContent 'footer_label1url'}}>{{getContent 'footer_label1'}}</a>
 		<span>|</span>
-		<a href=”http://www.facebook.com”>Facebook</a>
+		<a href={{getContent 'footer_label2url'}}>{{getContent 'footer_label2'}}</a>
 		<span>|</span>
-		<a href=”http://www.google.com”>Google</a>
+		<a href={{getContent 'footer_label3url'}}>{{getContent 'footer_label3'}}</a>
 		<span>|</span>
-		<span>Dissenyat per: </span>
-		<a href=”http://www.ordochao.org”>ordochao</a>
+		<span>{{getContent 'footer_label4'}}</span>
+		<a href={{getContent 'footer_label4url'}}>{{getContent 'footer_label_design'}}</a>
 		
 
