--- a/views/templates/header.hbs
+++ b/views/templates/header.hbs
@@ -3,8 +3,14 @@
     <img id="img-logo" src="pictures/logo/goodjoc-logo.png" height="20px" width="20px" />
   </a>  
 </div>
+<div id="language-selector">
+  <a class="language-selector-link selected" href="lang=0">cat</a>
+  <a class="language-selector-link" href="lang=1">cast</a>
+  <a class="language-selector-link" href="lang=2">en</a>
+</div>
 <div id="header-links">
-  <a class="header-link" href="#projects">Proyectos</a>
-  <a class="header-link" href="http://goodjoc.blogspot.com.es/">Blog</a>
-  <a class="header-link" href="#about">Sobre nosotros</a>
+  <a class="header-link" href="#projects">{{getContent 'header_1'}}</a>
+  <a class="header-link" href="http://goodjoc.blogspot.com.es/">{{getContent 'header_2'}}</a>
+  <a class="header-link" href="#about">{{getContent 'header_3'}}</a>
+  <a class="header-link" href="#contact">{{getContent 'header_4'}}</a>
 </div>
