--- a/views/templates/projects.hbs
+++ b/views/templates/projects.hbs
@@ -1,8 +1,8 @@
 <div id="titleSloganBox">
   <h1>
-    GOOD JOC.
+    {{getContent 'page_name'}}
   </h1>
   <h3>
-    Projects
+    {{getContent 'header_1'}}
   </h3>
 </div>
