next version of language selector. Views doesn't refresh. First version of Projects collection with Project Model

--- a/views/templates/header.hbs
+++ b/views/templates/header.hbs
@@ -4,9 +4,7 @@
   </a>  
 </div>
 <div id="language-selector">
-  <a class="language-selector-link selected" href="lang=0">cat</a>
-  <a class="language-selector-link" href="lang=1">cast</a>
-  <a class="language-selector-link" href="lang=2">en</a>
+  {{{languageLinks}}}
 </div>
 <div id="header-links">
   <a class="header-link" href="#projects">{{getContent 'header_1'}}</a>
