Finished second version. Lack of contents and images but complete

--- a/views/templates/about.hbs
+++ b/views/templates/about.hbs
@@ -1,8 +1,29 @@
-<div id="titleSloganBox">
-  <h1>
-    {{getContent 'page_name'}}
-  </h1>
-  <h3>
-    {{getContent 'header_3'}}
-  </h3>
+  <div id="titleSloganBox">
+    <h1>
+      {{getContent 'page_name'}}
+    </h1>
+    <h3>
+      {{getContent 'header_3'}}
+    </h3>
+  </div>
+<div id="aboutContent">
+
+  <div class="aboutItem displayedItem">
+      <div class="contentItem">
+        <h3>{{getContent 'member2_name'}}</h3>
+        <p>{{getContent 'member2_description'}}</p>
+      </div>
+      <div class="backgroundItem">
+      </div>
+  </div>
+
+  <div class="aboutItem displayedItem" style="left:33%">
+      <div class="contentItem">
+        <h3>{{getContent 'member1_name'}}</h3>
+        <p>{{getContent 'member1_description'}}</p>
+      </div>
+      <div class="backgroundItem">
+      </div>
+  </div>
+  
 </div>
