--- a/views/templates/contact.hbs
+++ b/views/templates/contact.hbs
@@ -3,6 +3,8 @@
     {{getContent 'page_name'}}
   </h1>
   <h3>
-    {{getContent 'header_4'}}
+    <a class="mainLink" href="mailto:contact@goodjoc.com?Subject=Contacto desde la web de GoodJoc" target="_top">
+      contact@goodjoc.com
+    </a>
   </h3>
 </div>
