--- a/views/templates/header.hbs
+++ b/views/templates/header.hbs
@@ -3,12 +3,21 @@
     <img id="img-logo" src="pictures/logo/goodjoc-logo.png" height="20px" width="20px" />
   </a>  
 </div>
+<div id="title-content">
+  <a href="">
+  <h1>
+    Good Joc
+  </h1>
+  </a>  
+</div>
 <div id="language-selector">
   {{{languageLinks}}}
 </div>
 <div id="header-links">
   <a class="header-link" href="#projects">{{getContent 'header_1'}}</a>
-  <a class="header-link" href="http://goodjoc.blogspot.com.es/">{{getContent 'header_2'}}</a>
-  <a class="header-link" href="#about">{{getContent 'header_3'}}</a>
-  <a class="header-link" href="#contact">{{getContent 'header_4'}}</a>
+  <a class="header-link" href="#about">{{getContent 'header_2'}}</a>
+  <a class="header-link" href="#contact">{{getContent 'header_3'}}</a>
 </div>
+<div class="blog-link"> 
+  <a class="header-link" href="http://goodjoc.blogspot.com.es/">{{getContent 'title_blog'}}</a>
+</div
