--- a/views/styles/application.styl
+++ b/views/styles/application.styl
@@ -13,6 +13,13 @@
   body
     background-color: #333;
 
+.footer span
+      color #8888a8
+      text-decoration none
+      padding-left 0px
+      margin-left 0px
+      padding-right 5px
+
   .footer-container
     text-align: center
     margin: 0 auto
@@ -37,5 +44,6 @@
   .header-container
   	width: 100%
   	position: fixed
+    text-shadow: 1px 1px #F00
 
 
