--- a/views/styles/footer.styl
+++ b/views/styles/footer.styl
@@ -1,49 +1,42 @@
 @import 'nib'
 .footer
-    width: 640px
-    height: 20px
-    font-family: 'Fjord One', serif
-    font-size: 10pt
-    border-top-left-radius: 15px
-    border-top-right-radius: 15px
-    display:inline-block
-    bottom: 30px    
-    padding-top: 3px
-    padding-left: 10px
+    width 50%
+    height 20px
+    font-size 10pt
+    display inline-block
+    bottom 30px    
+    padding-top 3px
 
 /*
 .footer
-    width: 640px
-    height: 20px
-    background-color: #9898a8
-    opacity: 0.8
-    font-family: 'Fjord One', serif
-    font-size: 10pt
-    border-top-left-radius: 15px
-    border-top-right-radius: 15px
-    display:inline-block
-    bottom: 0px    
-    padding-top: 3px
-    padding-left: 10px*/    
+    width 640px
+    height 20px
+    background-color #9898a8
+    opacity 0.8
+    font-family 'Fjord One', serif
+    font-size 10pt
+    border-top-left-radius 15px
+    border-top-right-radius 15px
+    displayinline-block
+    bottom 0px    
+    padding-top 3px
+    padding-left 10px*/    
 
 .footer a
-      margin-left: 10px
-      margin-right: 15px
-      color: #c8c8e8
-      text-decoration: none
+  margin-right 5px
+  color #c8c8d8
+  text-decoration none
 
-      &:visited
-        color: #c8c8e8
-
-      &:hover
-        color: #fb3
-
-      &:last-child
-        margin-right: 0
+.footer a:visited
+    color #c8c8d8
+.footer a:hover
+    color #faaa96
+.footer a:last-child
+    margin-right 0
 
 .footer span
-      color: #8888a8
-      text-decoration: none
-      padding-left: 0px
-      margin-left: 0px
-      padding-right: 10px
+      color #8888a8
+      text-decoration none
+      padding-left 0px
+      margin-left 0px
+      padding-right 5px
