--- a/views/styles/header.styl
+++ b/views/styles/header.styl
@@ -1,14 +1,28 @@
 @import 'nib'
+@import 'theme1'
 
 
-#language-selector
-  position:fixed
-  left:80px
-  top: 6px
-  width: 120px
+background-header-gradient()
+  background: #c8c8e8
+  background: -webkit-gradient(linear, left top, left bottom, from(#c8c8e8), to(#a8a8c8)) 
+  background: -moz-linear-gradient(top,  #c8c8e8,  #8888a8) 
+
+@media (max-width: 599px) 
+  #language-selector
+    visibility: hidden
+    width: 0px
+    position:fixed
+
+@media (min-width: 600px)
+  #language-selector
+    position:fixed
+    left:180px
+    top: 4px
+    width: 120px
 
 .selected
-  border:1px dashed #8888a8;
+  border:1px dashed #666696;
+  border-radius: 5px;
 
 .language-selector-link
   margin-left: 0px
@@ -17,60 +31,97 @@
   padding-right: 3px
   padding-top: 1px
   padding-bottom: 1px
-  color: #555
   font-size: 10pt
+  color #333
   text-decoration: none
-  text-shadow: 1px 1px #eee
+  //text-shadow: 1px 1px #eee
 
 .language-selector-link:visited
   color: #111
 
 .language-selector-link:hover
-  text-shadow: 2px 1px #da0
+  text-shadow: 2px 1px #faaa96
 
 .language-selector-link:last-child
   margin-right: 0
 
+@media (max-width: 450px)
+  #title-content
+    visibility hidden
+    width 0px
+
+#title-content
+  font-family: 'Denk One', sans-serif;
+  position fixed
+  left:50px
+  top: 5px
+  width: 200px
+  
+
+#title-content h1
+  margin 0
+  font-size 10pt
+
+#title-content a
+  text-decoration: none
+  color: #555
+
+
 #logo-content
   position:fixed
   left:25px
-  top: 0px
-  width: 100px
+  top: 2px
+  max-width: 100px
+  width: 10%
 
 #img-logo
-  width: 34px
-  height: 34px
+  width 23px
+  height 23px
   
 
 #header-links
+  padding: 0px
   width: 100%
   float: right
   text-align: right
   display:inline
+  font-size: 10pt
+
+.blog-link
+  width: 45px
+  height: 40px
+  left: 50px
+  z-index -5
+  position:fixed
+  border-bottom-left-radius: 15px
+  border-bottom-right-radius: 15px
+  margin: 0 auto
+  background-color: #FFCCA6
+  padding-top 20px
+  font-size 10pt
 
 .header
   width: 100%
-  height: 36px
+  height: 25px
   margin: 0 auto
-  padding: 8px
+  padding: 6px
   padding-right: 40px
-  background-color: #d8d8f8
-  font-family: 'Fjord One', serif
-  font-size: 12pt
+  background-header-gradient()
   border-bottom-left-radius: 15px
+  border-bottom-right-radius: 15px
 
   &-link
     margin-left: 10px
-    margin-right: 15px
+    margin-right: 5px
     color: #555
     text-decoration: none
-    text-shadow: 1px 1px #eee
+    //text-shadow: 1px 1px #eee
 
     &:visited
       color: #111
 
     &:hover
-      text-shadow: 2px 1px #da0
+      text-shadow: 2px 1px #faaa96
 
     &:last-child
       margin-right: 0
