--- a/views/styles/home-page.styl
+++ b/views/styles/home-page.styl
@@ -3,40 +3,30 @@
 .mainContent
   width: 100%
   position: absolute
-  font-family: 'Fjord One', serif
-  
-
-
-/*#titleSloganBox
-  text-shadow: 2px 1px #000000
-  text-align: right
-  padding: 15px
-  right: 5%
-  bottom: 20%
-  width: 90%
-  background: rgba(152, 152, 168, .8)
-  position: fixed
-  border-radius: 15px*/
-
+  font-family 'Fjord One', serif
 
 #titleSloganBox
   color: #c8c8e8
   text-shadow: 2px 1px #000000
   text-align: right
   padding: 15px
-  right: 5%
+  right: 2%
   bottom: 20%
-  width: 90%
-  position: fixed
-  border-radius: 15px
+  width: 250px
+  position fixed
+  opacity: 0.8
+  
 	
 #titleSloganBox h1
-  font-size: 64pt
   margin-bottom: 0px
   margin-top: 0px
 
 #titleSloganBox h3
-	font-size: 16pt
 	margin-top: 0px
+
+
+
+
+
 	
 
